Updated dependencies, switched to local fonts.

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -8,11 +8,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
 
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700&display=swap" rel="stylesheet">
-
     {{# Favicons #}}
     {{ partial:partials.favicons }}
 
@@ -23,12 +18,12 @@
 </head>
 
 <body
-    class="flex flex-col justify-between min-h-screen font-sans antialiased {{ environment === 'local' ? 'debug-screens' : null }}">
-    {{ partial:layout.navigation }}
+    class="flex flex-col justify-between min-h-screen font-sans antialiased {{ environment === 'local' ? 'debug-screens' : '' }}">
+    {{ partial:layout/navigation }}
 
     {{ template_content }}
 
-    {{ partial:layout.footer }}
+    {{ partial:layout/footer }}
 </body>
 
 </html>
