--- a/resources/views/sets/hero/hero_1.antlers.html
+++ b/resources/views/sets/hero/hero_1.antlers.html
@@ -15,7 +15,6 @@
         {{ /if }}
     </div>
     <div class="mt-16 lg:w-7/12 md:w-6/12 md:mt-0">
-        <img src="{{ glide:image width="770" height="580" fit="crop_focal" }}" alt="{{ image:alt }}"
-            class="object-cover w-full h-auto">
+        {{ partial:components/picture :image="image" cover="true" sizes="(min-width: 768px) 35vw, 80vw" }}
     </div>
 </div>
