--- a/resources/views/sets/hero/hero_2.antlers.html
+++ b/resources/views/sets/hero/hero_2.antlers.html
@@ -22,8 +22,7 @@
             </div>
             {{# Purple Circle #}}
 
-            <img src="{{ glide:image width="610" height="460" fit="crop_focal" }}"
-                alt="{{ image:alt }}" class="object-cover mx-auto" />
+            {{ partial:components/picture :image="image" cover="true" sizes="(min-width: 768px) 35vw, 80vw" }}
         </div>
     </div>
 </div>
