--- a/resources/views/sets/hero/hero_3.antlers.html
+++ b/resources/views/sets/hero/hero_3.antlers.html
@@ -16,7 +16,6 @@
 
     {{# Add Width #}}
     <div class="max-w-3xl mx-auto mt-12">
-        <img src="{{ glide:image width="610" height="460" fit="crop_focal" }}" alt="{{ image:alt }}"
-            class="object-cover w-full h-auto">
+        {{ partial:components/picture :image="image" cover="true" sizes="(min-width: 768px) 35vw, 80vw" }}
     </div>
 </div>
