--- a/resources/views/sets/logo_cloud/logo_cloud_1.antlers.html
+++ b/resources/views/sets/logo_cloud/logo_cloud_1.antlers.html
@@ -3,9 +3,7 @@
         <ul class="grid grid-cols-2 flex-gap-4 md:flex-gap-6 lg:flex-gap-8 md:grid-cols-4">
             {{ images }}
                 <li class="p-8 bg-white shadow-3xl rounded-2xl">
-                    <img src="{{ glide:url width="150" height="80" fit="contain" }}"
-                        alt="{{ alt }}"
-                        class="object-cover w-auto h-auto mx-auto max-h-8">
+                    {{ partial:components/picture :image="url" class="mx-auto max-h-8" sizes="(min-width: 64px) 35vw, 60vw" }}
                 </li>
             {{ /images }}
         </ul>
