--- a/resources/views/sets/logo_cloud/logo_cloud_3.antlers.html
+++ b/resources/views/sets/logo_cloud/logo_cloud_3.antlers.html
@@ -8,9 +8,7 @@
         <div class="max-w-md mx-auto md:ml-auto">
             <div class="grid grid-cols-2 flex-gap-10 md:grid-cols-4">
                 {{ images }}
-                    <img src="{{ glide:url width="150" height="50" fit="contain" }}"
-                        alt="{{ alt }}"
-                        class="object-cover w-auto h-auto mx-auto max-h-14">
+                    {{ partial:components/picture :image="url" cover="true" class="mx-auto max-h-14" sizes="(min-width: 64px) 35vw, 60vw" }}
                 {{ /images }}
             </div>
         </div>
