--- a/resources/views/sets/section_with_image/section_with_image_2.antlers.html
+++ b/resources/views/sets/section_with_image/section_with_image_2.antlers.html
@@ -16,8 +16,7 @@
             {{ /if }}
         </div>
         <div class="order-first max-w-2xl p-4 mx-auto md:mt-6 lg:mt-0 md:order-last ">
-            <img src="{{ glide:image width="650" height="345" fit="crop_focal" }}"
-                alt="{{ image:alt }}" class="object-cover w-full h-auto">
+            {{ partial:components/picture :image="image" cover="true" sizes="(min-width: 768px) 35vw, 80vw" }}
         </div>
     </div>
 </div>
