--- a/resources/views/sets/testimonials/testimonials_2.antlers.html
+++ b/resources/views/sets/testimonials/testimonials_2.antlers.html
@@ -6,9 +6,7 @@
                     <div class="flex items-center">
                         {{ if image }}
                             <div class="w-20 h-20 overflow-hidden rounded-xl">
-                                <img src="{{ glide:image width="75" height="75"  fit="crop_focal" }}"
-                                    alt="{{ image:alt }}"
-                                    class="object-cover w-full h-auto">
+                                {{ partial:components/picture :image="image" cover="true" sizes="(min-width: 120px) 35vw, 80vw" }}
                             </div>
                         {{ /if }}
                         <div class="ml-6">
