Updated dependencies, fixed small issue with lead

--- a/resources/views/components/lead.antlers.html
+++ b/resources/views/components/lead.antlers.html
@@ -4,7 +4,7 @@ sizes:
     sm: 'text-sm'
     base: 'text-base'
     lg: 'text-lg'
-    xl: 'md:text-xl text-base'
+    xl: 'text-xl'
 types:
     bluegray: 'text-bluegray-300'
     gray: 'text-gray-700'
