Updated to Tailwind v3

--- a/resources/views/layout/_navigation.antlers.html
+++ b/resources/views/layout/_navigation.antlers.html
@@ -19,7 +19,7 @@
     </button>
 
     <!--Menu-->
-    <div class="flex-grow w-full lg:flex lg:items-center lg:w-auto" :class="{ 'block': isOpen, 'hidden': !isOpen }">
+    <div class="w-full grow lg:flex lg:items-center lg:w-auto" :class="{ 'block': isOpen, 'hidden': !isOpen }">
         <ul id="nav-list"
             class="flex-wrap items-center justify-end flex-1 pt-6 space-y-5 lg:space-y-0 lg:pt-0 list-reset lg:flex lg:space-x-10">
             {{ nav:navigation include_home="true" }}
