--- a/resources/views/sets/features/feature_2.antlers.html
+++ b/resources/views/sets/features/feature_2.antlers.html
@@ -12,8 +12,7 @@
             {{ items }}
                 <div class="flex flex-row items-center">
                     {{ if icon }}
-                        <div
-                            class="flex items-center justify-center flex-shrink-0 w-20 h-20 mr-5 bg-pink-500 rounded-3xl">
+                        <div class="flex items-center justify-center w-20 h-20 mr-5 bg-pink-500 shrink-0 rounded-3xl">
                             {{ svg src="{{ icon }}" class="w-10 h-10 text-white fill-current" }}
                         </div>
                     {{ /if }}
