--- a/resources/views/sets/features/feature_4.antlers.html
+++ b/resources/views/sets/features/feature_4.antlers.html
@@ -13,7 +13,7 @@
         {{ items }}
             <div class="flex items-start">
                 {{ if icon }}
-                    <div class="flex items-center justify-center flex-shrink-0 w-16 h-16 mr-6 shadow-xs rounded-xl">
+                    <div class="flex items-center justify-center w-16 h-16 mr-6 shadow-xs shrink-0 rounded-xl">
                         {{ svg src="{{ icon }}" class="w-10 h-10 text-pink-500 fill-current" }}
                     </div>
                 {{ /if }}
