--- a/resources/views/sets/hero/hero_4.antlers.html
+++ b/resources/views/sets/hero/hero_4.antlers.html
@@ -14,7 +14,7 @@
         {{ partial:components.button label=label size=button_size color=variant }}
     {{ /if }}
 
-    <div class="absolute left-[50%] top-[50%] transform translate-x-[-50%] md:translate-y-[8%] translate-y-[25%] rounded-full xl:w-[1115px] xl:h-[1115px] lg:w-[950px] lg:h-[950px] md:w-[800px] md:h-[800px] w-[400px] h-[400px] bg-gradient-from-left"
+    <div class="absolute left-[50%] top-[50%] translate-x-[-50%] md:translate-y-[8%] translate-y-[25%] rounded-full xl:w-[1115px] xl:h-[1115px] lg:w-[950px] lg:h-[950px] md:w-[800px] md:h-[800px] w-[400px] h-[400px] bg-gradient-from-left"
         style="z-index: -1;">
 
     </div>
