--- a/resources/views/sets/testimonials/testimonials_1.antlers.html
+++ b/resources/views/sets/testimonials/testimonials_1.antlers.html
@@ -19,7 +19,7 @@
             <div class="mt-10 md:w-7/12 md:mt-0">
                 {{ if description }}
                     <div class="flex items-start md:max-w-xl">
-                        {{ svg src="quote.svg" class="flex-shrink-0 w-6 h-6 text-purple-500 fill-current" }}
+                        {{ svg src="quote.svg" class="w-6 h-6 text-purple-500 fill-current shrink-0" }}
 
                         {{ partial:components.lead label=description size="xl" color="bluegray" class="ml-6" }}
                     </div>
