--- a/resources/views/sets/testimonials/testimonials_3.antlers.html
+++ b/resources/views/sets/testimonials/testimonials_3.antlers.html
@@ -11,7 +11,7 @@
                 {{ /if }}
                 <div class="max-w-xl mx-auto mt-10 md:mt-0">
                     <div class="flex flex-col p-8 bg-white shadow-xs rounded-2xl">
-                        {{ svg src="quote.svg" class="flex-shrink-0 w-6 h-6 text-indigo-900 fill-current" }}
+                        {{ svg src="quote.svg" class="w-6 h-6 text-indigo-900 fill-current shrink-0" }}
 
                         {{ if description }}
                             {{ partial:components.lead label=description size="xl" color="bluegray" class="mt-3" }}
