--- a/resources/views/sets/features/feature_3.antlers.html
+++ b/resources/views/sets/features/feature_3.antlers.html
@@ -16,7 +16,7 @@
                     {{ items }}
                         <div class="flex items-center p-5 bg-white shadow-3xl rounded-xl">
                             {{ if icon }}
-                                {{ svg src="{{ icon }}" class="flex-shrink-0 w-16 h-16 mr-5 text-pink-500 fill-current" }}
+                                {{ svg src="{{ icon }}" class="w-16 h-16 mr-5 text-pink-500 fill-current shrink-0" }}
                             {{ /if }}
                             <div>
                                 {{ if title }}
