--- a/resources/views/sets/features/feature_3.antlers.html
+++ b/resources/views/sets/features/feature_3.antlers.html
@@ -3,12 +3,12 @@
         <div class="flex flex-wrap">
             <div class="mb-10 md:mb-0 lg:w-4/12">
                 {{ if title }}
-                    {{ partial:components.heading label=title size="h3" color="blue" }}
+                    {{ partial:components.heading :label="title" size="h3" color="blue" }}
                 {{ /if }}
 
                 {{ if description }}
                     <div class="mt-3 md:max-w-[265px]">
-                        {{ partial:components.lead label=description size="base" color="bluegray" }}
+                        {{ partial:components.lead :label="description" size="base" color="bluegray" }}
                     </div>
                 {{ /if }}
             </div>
@@ -21,11 +21,11 @@
                             {{ /if }}
                             <div>
                                 {{ if title }}
-                                    {{ partial:components.heading label=title size="h5" color="blue" }}
+                                    {{ partial:components.heading :label="title" size="h5" color="blue" }}
                                 {{ /if }}
 
                                 {{ if description }}
-                                    {{ partial:components.lead label=description size="base" color="bluegray" class="mt-2" }}
+                                    {{ partial:components.lead :label="description" size="base" color="bluegray" class="mt-2" }}
                                 {{ /if }}
                             </div>
                         </div>
