--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -10,7 +10,7 @@
 
     {{# Favicons #}}
     {{ partial:partials.favicons }}
-    {{ seotamic }}
+    {{ partial:seo }}
     {{ vite src="resources/css/tailwind.css|resources/js/site.js" }}
 </head>
 
