--- a/resources/views/partials/newsletter_form.antlers.html
+++ b/resources/views/partials/newsletter_form.antlers.html
@@ -4,6 +4,6 @@
             class="block w-full py-5 rounded-full focus:ring-white px-7" />
     </div>
     <div class="mx-auto md:mr-auto shrink-0">
-        {{ partial:components/button size="md" color="white" label="Sign Up" class="" }}
+        {{ partial:components/button size="md" color="white" link="#" label="Sign Up" }}
     </div>
 </div>
